# oxford-ai-2025-group1-full-code

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml  run.py
Getting_Started/: 01_Course_Guide.md  02_Logging_Guide.md  03_Quick_Iteration_Guide.md  diagram.mermaid
data/: final_customer_location_aligned.csv
docs/ai_generated/: Logistics_Implementation_Plan.md  course-plan.md  otel-tracing-plan.md
docs/course-materials/markdown/: Glossary of OpenAI Agent SDK (Healthcare Tutorial).md  Healthcare Patient Journey – Deterministic Agent Workflows.md  Multi-Agent Systems with OpenAI Agents SDK_Assignment_Steps.md  OPENAI AGENT SDK - Full Code Assignment.md  Objectives, Materials, and Assignment @Oxford AI Summit.md
docs/course-materials/original/: OPENAI AGENT SDK - Full Code Assignment.pptx  Objectives, Materials, and Assignment @Oxford AI Summit.docx  OpenAI_Agent_SDK_Deterministic_Flow_Healthcare_Example.ipynb
notebooks/: agent05_andy_demo.ipynb  agent05_orchestrator_iteration_suggestions.md
notebooks/samples/: Capstone_project_AI_summit_2025.ipynb  README_agent01_sample.md  agent01_sample_demo.ipynb
notebooks/samples/.ipynb_checkpoints/: agent01_sample_demo-checkpoint.ipynb
src/logistics_agents/: __init__.py  main.py
src/logistics_agents/agents/: __init__.py  conftest.py
src/logistics_agents/agents/agent_01_threshold_monitor/: README.md  __init__.py  agent.py
src/logistics_agents/agents/agent_01_threshold_monitor/tests/: __init__.py  test_threshold_monitor.py
src/logistics_agents/agents/agent_01_threshold_monitor/tools/: __init__.py  priority_classifier.py  threshold_checker.py
src/logistics_agents/agents/agent_02_route_computer/: README.md  __init__.py  agent.py
src/logistics_agents/agents/agent_03_restock_calculator/: README.md  __init__.py  agent.py
src/logistics_agents/agents/agent_04_order_consolidator/: README.md  __init__.py  agent.py
src/logistics_agents/agents/agent_05_orchestrator/: README.md  __init__.py  agent.py
src/logistics_agents/config/: __init__.py  settings.py
src/logistics_agents/models/: __init__.py  analysis_results.py  inventory_data.py
src/logistics_agents/utils/: __init__.py  agent_runner.py  data_loader.py  helpers.py  logging_config.py  notebook_logging.py
(+20 files in other folders)
